--- a/app/land_stories/pubspec.yaml
+++ b/app/land_stories/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   sqflite: ^1.3.0
   path_provider: ^1.6.7
+  flutter_platform_widgets: ^0.32.5
 
 
   # The following adds the Cupertino Icons font to your application.
