--- a/app/land_stories/ios/Flutter/AppFrameworkInfo.plist
+++ b/app/land_stories/ios/Flutter/AppFrameworkInfo.plist
@@ -22,5 +22,9 @@
   <string>1.0</string>
   <key>MinimumOSVersion</key>
   <string>8.0</string>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>Need this for locations</string>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>Need this for locations</string>
 </dict>
 </plist>
