--- a/app/land_stories/pubspec.yaml
+++ b/app/land_stories/pubspec.yaml
@@ -20,13 +20,19 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite: ^1.3.0
+  # path: ^1.6.4
   path_provider: ^1.6.7
   flutter_platform_widgets: ^0.32.5
-
+  scroll_snap_list: ^0.3.0
+  http: ^0.12.0
+  geolocator: ^5.3.1
+  location: ^3.0.2
+  # camera: ^0.5.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  
 
 dev_dependencies:
   flutter_test:
