--- a/app/land_stories/pubspec.yaml
+++ b/app/land_stories/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   scroll_snap_list: ^0.3.0
   http: ^0.12.0
   geolocator: ^5.3.1
-  location: ^3.0.2
+  location: ^3.0.2  
+  intl: ^0.16.1
   # camera: ^0.5.7
 
   # The following adds the Cupertino Icons font to your application.
